@@ -1,7 +1,5 @@
 package cgeo.geocaching.mapcommon;
 
-import gnu.android.app.appmanualclient.AppManualReaderClient;
-
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Locale;
@@ -34,9 +32,9 @@ import cgeo.geocaching.cgSettings.mapSourceEnum;
 import cgeo.geocaching.cgUpdateDir;
 import cgeo.geocaching.cgUpdateLoc;
 import cgeo.geocaching.cgUser;
-import cgeo.geocaching.cgWarning;
 import cgeo.geocaching.cgWaypoint;
 import cgeo.geocaching.cgeoapplication;
+import cgeo.geocaching.activity.ActivityMixin;
 import cgeo.geocaching.mapinterfaces.ActivityImpl;
 import cgeo.geocaching.mapinterfaces.CacheOverlayItemImpl;
 import cgeo.geocaching.mapinterfaces.GeoPointImpl;
@@ -66,7 +64,6 @@ public class cgeomap extends MapBase {
 	private MapControllerImpl mapController = null;
 	private cgSettings settings = null;
 	private cgBase base = null;
-	private cgWarning warning = null;
 	private cgeoapplication app = null;
 	private SharedPreferences.Editor prefsEdit = null;
 	private cgGeo geo = null;
@@ -142,7 +139,7 @@ public class cgeomap extends MapBase {
 				// set title
 				final StringBuilder title = new StringBuilder();
 
-				if (live == true) {
+				if (live) {
 					title.append(res.getString(R.string.map_live));
 				} else {
 					title.append(res.getString(R.string.map_map));
@@ -155,7 +152,7 @@ public class cgeomap extends MapBase {
 					title.append("]");
 				}
 
-				base.setTitle(activity, title.toString());
+				ActivityMixin.setTitle(activity, title.toString());
 			} else if (what == 1 && mapView != null) {
 				mapView.invalidate();
 			}
@@ -168,9 +165,9 @@ public class cgeomap extends MapBase {
 			final int what = msg.what;
 
 			if (what == 0) {
-				base.showProgress(activity, false);
+				ActivityMixin.showProgress(activity, false);
 			} else if (what == 1) {
-				base.showProgress(activity, true);
+				ActivityMixin.showProgress(activity, true);
 			}
 		}
 	};
@@ -203,10 +200,10 @@ public class cgeomap extends MapBase {
 				}
 
 				if (geo == null) {
-					geo = app.startGeo(activity, geoUpdate, base, settings, warning, 0, 0);
+					geo = app.startGeo(activity, geoUpdate, base, settings, 0, 0);
 				}
 				if (settings.useCompass == 1 && dir == null) {
-					dir = app.startDir(activity, dirUpdate, warning);
+					dir = app.startDir(activity, dirUpdate);
 				}
 			}
 		}
@@ -216,7 +213,7 @@ public class cgeomap extends MapBase {
 		@Override
 		public void handleMessage(Message msg) {
 			if (!noMapTokenShowed) {
-				warning.showToast(res.getString(R.string.map_token_err));
+				ActivityMixin.showToast(activity, res.getString(R.string.map_token_err));
 
 				noMapTokenShowed = true;
 			}
@@ -238,7 +235,6 @@ public class cgeomap extends MapBase {
 		app.setAction(null);
 		settings = new cgSettings(activity, activity.getSharedPreferences(cgSettings.preferences, 0));
 		base = new cgBase(app, settings, activity.getSharedPreferences(cgSettings.preferences, 0));
-		warning = new cgWarning(activity);
 		prefsEdit = activity.getSharedPreferences(cgSettings.preferences, 0).edit();
 		MapFactory mapFactory = settings.getMapFactory();
 
@@ -249,19 +245,15 @@ public class cgeomap extends MapBase {
 		activity.getWindow().addFlags(WindowManager.LayoutParams.FLAG_KEEP_SCREEN_ON);
 
 		// set layout
-		if (settings.skin == 1) {
-			activity.setTheme(R.style.light);
-		} else {
-			activity.setTheme(R.style.dark);
-		}
+		ActivityMixin.setTheme(activity);
 		activity.setContentView(settings.getMapFactory().getMapLayoutId());
-		base.setTitle(activity, res.getString(R.string.map_map));
+		ActivityMixin.setTitle(activity, res.getString(R.string.map_map));
 
 		if (geo == null) {
-			geo = app.startGeo(activity, geoUpdate, base, settings, warning, 0, 0);
+			geo = app.startGeo(activity, geoUpdate, base, settings, 0, 0);
 		}
 		if (settings.useCompass == 1 && dir == null) {
-			dir = app.startDir(activity, dirUpdate, warning);
+			dir = app.startDir(activity, dirUpdate);
 		}
 
 		// initialize map
@@ -278,7 +270,7 @@ public class cgeomap extends MapBase {
 		mapView.clearOverlays();
 
 		if (overlayMyLoc == null) {
-			overlayMyLoc = new cgMapMyOverlay(settings);
+			overlayMyLoc = new cgMapMyOverlay(settings, activity);
 			mapView.addOverlay(mapFactory.getOverlayBaseWrapper(overlayMyLoc));
 		}
 
@@ -360,10 +352,10 @@ public class cgeomap extends MapBase {
 
 		app.setAction(null);
 		if (geo == null) {
-			geo = app.startGeo(activity, geoUpdate, base, settings, warning, 0, 0);
+			geo = app.startGeo(activity, geoUpdate, base, settings, 0, 0);
 		}
 		if (settings.useCompass == 1 && dir == null) {
-			dir = app.startDir(activity, dirUpdate, warning);
+			dir = app.startDir(activity, dirUpdate);
 		}
 
 		if (geo != null) {
@@ -577,7 +569,7 @@ public class cgeomap extends MapBase {
 
 						for (cgCache oneCache : cachesProtected) {
 							if (oneCache != null && oneCache.latitude != null && oneCache.longitude != null) {
-								if (base.isCacheInViewPort(mapCenterLat, mapCenterLon, mapSpanLat, mapSpanLon, oneCache.latitude, oneCache.longitude) && app.isOffline(oneCache.geocode, null) == false) {
+								if (cgBase.isCacheInViewPort(mapCenterLat, mapCenterLon, mapSpanLat, mapSpanLon, oneCache.latitude, oneCache.longitude) && app.isOffline(oneCache.geocode, null) == false) {
 									geocodes.add(oneCache.geocode);
 								}
 							}
@@ -590,7 +582,7 @@ public class cgeomap extends MapBase {
 				detailTotal = geocodes.size();
 
 				if (detailTotal == 0) {
-					warning.showToast(res.getString(R.string.warn_save_nothing));
+					ActivityMixin.showToast(activity, res.getString(R.string.warn_save_nothing));
 
 					return true;
 				}
@@ -608,10 +600,10 @@ public class cgeomap extends MapBase {
 							}
 
 							if (geo == null) {
-								geo = app.startGeo(activity, geoUpdate, base, settings, warning, 0, 0);
+								geo = app.startGeo(activity, geoUpdate, base, settings, 0, 0);
 							}
 							if (settings.useCompass == 1 && dir == null) {
-								dir = app.startDir(activity, dirUpdate, warning);
+								dir = app.startDir(activity, dirUpdate);
 							}
 						} catch (Exception e) {
 							Log.e(cgSettings.tag, "cgeocaches.onPrepareOptionsMenu.onCancel: " + e.toString());
@@ -619,7 +611,7 @@ public class cgeomap extends MapBase {
 					}
 				});
 
-				Float etaTime = new Float((detailTotal * (float) 7) / 60);
+				Float etaTime = Float.valueOf((detailTotal * (float) 7) / 60);
 				if (etaTime < 0.4) {
 					waitDialog.setMessage(res.getString(R.string.caches_downloading) + " " + res.getString(R.string.caches_eta_ltm));
 				} else if (etaTime < 1.5) {
@@ -651,6 +643,10 @@ public class cgeomap extends MapBase {
 			boolean mapRestartRequired = switchMapSource(mapSource);
 
 			if (mapRestartRequired) {
+				// close old mapview
+				activity.finish();
+			
+				// prepare information to restart a similar view
 				Intent mapIntent = new Intent(activity, settings.getMapFactory().getMapClass());
 
 				mapIntent.putExtra("detail", fromDetailIntent);
@@ -665,10 +661,10 @@ public class cgeomap extends MapBase {
 				mapState[1] = mapCenter.getLongitudeE6();
 				mapState[2] = mapView.getMapZoomLevel();
 				mapIntent.putExtra("mapstate", mapState);
-
+				
+				// start the new map
 				activity.startActivity(mapIntent);
-
-				activity.finish();
+				
 			}
 
 			return true;
@@ -704,7 +700,7 @@ public class cgeomap extends MapBase {
 
 		prefsEdit.putInt("mapsource", settings.mapSource.ordinal());
 		prefsEdit.commit();
-
+		
 		boolean mapRestartRequired = settings.mapSource.isGoogleMapSource()!= settings.mapSourceUsed.isGoogleMapSource();
 
 		if (!mapRestartRequired) {
@@ -750,7 +746,7 @@ public class cgeomap extends MapBase {
 
 			try {
 				if (overlayMyLoc == null && mapView != null) {
-					overlayMyLoc = new cgMapMyOverlay(settings);
+					overlayMyLoc = new cgMapMyOverlay(settings, activity);
 					mapView.addOverlay(settings.getMapFactory().getOverlayBaseWrapper(overlayMyLoc));
 				}
 
@@ -759,7 +755,7 @@ public class cgeomap extends MapBase {
 				}
 
 				if (geo.latitudeNow != null && geo.longitudeNow != null) {
-					if (followMyLocation == true) {
+					if (followMyLocation) {
 						myLocationInMiddle();
 					} else {
 						// move blue arrow
@@ -771,7 +767,7 @@ public class cgeomap extends MapBase {
 					if (geo.bearingNow != null) {
 						overlayMyLoc.setHeading(geo.bearingNow);
 					} else {
-						overlayMyLoc.setHeading(new Double(0));
+						overlayMyLoc.setHeading(Double.valueOf(0));
 					}
 				}
 			} catch (Exception e) {
@@ -883,7 +879,7 @@ public class cgeomap extends MapBase {
 						} else if (((Math.abs(spanLatitudeNow - spanLatitude) > 50) || (Math.abs(spanLongitudeNow - spanLongitude) > 50) || // changed zoom
 								(Math.abs(centerLatitudeNow - centerLatitude) > (spanLatitudeNow / 4)) || (Math.abs(centerLongitudeNow - centerLongitude) > (spanLongitudeNow / 4)) // map moved
 								) && (cachesCnt <= 0 || caches == null || caches.isEmpty()
-								|| !base.isInViewPort(centerLatitude, centerLongitude, centerLatitudeNow, centerLongitudeNow, spanLatitude, spanLongitude, spanLatitudeNow, spanLongitudeNow))) {
+								|| !cgBase.isInViewPort(centerLatitude, centerLongitude, centerLatitudeNow, centerLongitudeNow, spanLatitude, spanLongitude, spanLatitudeNow, spanLongitudeNow))) {
 							moved = true;
 						}
 
@@ -998,7 +994,7 @@ public class cgeomap extends MapBase {
 							moved = true;
 						} else if (((Math.abs(spanLatitudeNow - spanLatitudeUsers) > 50) || (Math.abs(spanLongitudeNow - spanLongitudeUsers) > 50) || // changed zoom
 								(Math.abs(centerLatitudeNow - centerLatitudeUsers) > (spanLatitudeNow / 4)) || (Math.abs(centerLongitudeNow - centerLongitudeUsers) > (spanLongitudeNow / 4)) // map moved
-								) && !base.isInViewPort(centerLatitudeUsers, centerLongitudeUsers, centerLatitudeNow, centerLongitudeNow, spanLatitudeUsers, spanLongitudeUsers, spanLatitudeNow, spanLongitudeNow)) {
+								) && !cgBase.isInViewPort(centerLatitudeUsers, centerLongitudeUsers, centerLatitudeNow, centerLongitudeNow, spanLatitudeUsers, spanLongitudeUsers, spanLatitudeNow, spanLongitudeNow)) {
 							moved = true;
 						}
 
@@ -1584,7 +1580,7 @@ public class cgeomap extends MapBase {
 
 			for (String geocode : geocodes) {
 				try {
-					if (stop == true) {
+					if (stop) {
 						break;
 					}
 
@@ -1602,7 +1598,7 @@ public class cgeomap extends MapBase {
 							}
 						}
 
-						if (stop == true) {
+						if (stop) {
 							Log.i(cgSettings.tag, "Stopped storing process.");
 
 							break;
@@ -1737,13 +1733,13 @@ public class cgeomap extends MapBase {
 		}
 
 		if (status == null) {
-			if (followMyLocation == true) {
+			if (followMyLocation) {
 				myLocSwitch.setImageResource(R.drawable.my_location_on);
 			} else {
 				myLocSwitch.setImageResource(R.drawable.my_location_off);
 			}
 		} else {
-			if (status == true) {
+			if (status) {
 				myLocSwitch.setImageResource(R.drawable.my_location_on);
 			} else {
 				myLocSwitch.setImageResource(R.drawable.my_location_off);
@@ -1761,7 +1757,7 @@ public class cgeomap extends MapBase {
 				myLocSwitch = (ImageView) activity.findViewById(R.id.my_position);
 			}
 
-			if (followMyLocation == true) {
+			if (followMyLocation) {
 				followMyLocation = false;
 
 				myLocSwitch.setImageResource(R.drawable.my_location_off);
@@ -1781,19 +1777,11 @@ public class cgeomap extends MapBase {
 
 	// close activity and open homescreen
 	public void goHome(View view) {
-		base.goHome(activity);
+		ActivityMixin.goHome(activity);
 	}
 
 	// open manual entry
 	public void goManual(View view) {
-		try {
-			AppManualReaderClient.openManual(
-					"c-geo",
-					"c:geo-live-map",
-					activity,
-					"http://cgeo.carnero.cc/manual/");
-		} catch (Exception e) {
-			// nothing
-		}
+		ActivityMixin.goManual(activity, "c:geo-live-map");
 	}
 }
